--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
     "mime-types": "^2.1.35",
     "mongoose": "^7.2.1",
     "multer": "^1.4.5-lts.1",
