--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT_APPLICATION=3200
-MONGODB_ATLAS=mongodb+srv://EricRojo:practicalaboral@cluster0.78zh6ct.mongodb.net/PracticaLaboral
+# MONGODB_ATLAS=mongodb+srv://EricRojo:practicalaboral@cluster0.78zh6ct.mongodb.net/PracticaLaboral
+MONGODB_ATLAS='mongodb://localhost/file'
