--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
+    "localtunnel": "^2.0.2",
     "mime-types": "^2.1.35",
     "mongoose": "^7.2.1",
     "multer": "^1.4.5-lts.1",
